--- a/Form/style.css
+++ b/Form/style.css
@@ -1,21 +1,18 @@
 .nav {
-  background-color: red;
-  word-spacing: 5.5cm;
+  background-color: #333333;
+  word-spacing: 7cm;
   margin: 0.5cm 0.5cm 0.5cm;
   padding: 0.3cm 0.3cm 0.3cm 1cm;
   text-align: center;
   color: whitesmoke;
 }
 
+marquee {
+  background-color: red;
+}
 .home {
   gap: 10cm;
   text-align: left;
-}
-
-h1 {
-  text-align: center;
-  margin: 0;
-  padding: 0;
 }
 
 img {
@@ -26,16 +23,58 @@ img {
 .h1,
 p {
   font-weight: bolder;
-  text-align: center;
   word-spacing: 0.3cm;
 }
+
+td {
+  color: #000;
+  background-color: #f5f5f5;
+}
+
+th {
+  color: whitesmoke;
+  background-color: #003366;
+}
+
 body {
   background-color: aqua;
 }
+
 table {
   position: absolute;
-  top: 899px;
+  top: 1075px;
   left: 38.5%;
   font-weight: bolder;
   text-align: center;
+}
+
+fieldset {
+  border: 1px solid black;
+  font-weight: bolder;
+}
+
+legend {
+  text-align: center;
+}
+
+label {
+  color: #4a4a4a;
+}
+
+input[type="text"],
+input[type="tel"],
+input[type="email"] {
+  border: 2.5px solid black;
+}
+
+input[type="select"],
+input[type="option"] {
+  border: 2.5px solid black;
+}
+
+h5 {
+  text-align: right;
+  font-weight: bolder;
+  margin: 0;
+  padding: 0;
 }
