--- a/Form/style.css
+++ b/Form/style.css
@@ -1,109 +1,145 @@
-.nav {
-  background-color: black;
-  word-spacing: 177px;
-  margin: 0.5cm 0.5cm 0.5cm;
-  padding: 0.3cm 0.3cm 0.3cm 1cm;
-  color: white;
-  text-align: center;
+.nav,
+a {
+    background-color: black;
+    font-size: 18px;
+    margin: 0 15px;
+    padding: 8px 15px;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    color: wheat;
+    word-spacing: 7.6cm;
 }
+
 .space:hover {
-  opacity: 0.5;
+    opacity: 0.5;
 }
+
 .space1:hover {
-  opacity: 0.5;
+    opacity: 0.5;
 }
+
 .space2:hover {
-  opacity: 0.5;
+    opacity: 0.5;
 }
+
 .space3:hover {
-  opacity: 0.5;
+    opacity: 0.5;
 }
+
 marquee {
-  background-color: red;
-  color: yellow;
-  padding: 5px;
-  border: 3px solid black;
+    background-color: red;
+    color: yellow;
+    padding: 5px;
+    border: 3px solid black;
 }
+
 .home {
-  gap: 10cm;
-  text-align: left;
+    gap: 10cm;
+    text-align: left;
 }
 
 img {
-  width: 500px;
-  height: 350px;
-  opacity: 0.5;
+    width: 500px;
+    height: 350px;
+    opacity: 0.5;
+    align-items: center;
+    justify-content: center;
 }
+
 img:hover {
-  opacity: 1;
+    opacity: 1;
+}
+
+figure {
+    text-align: center;
 }
 
 .h1,
 p {
-  font-weight: bolder;
-  word-spacing: 0.3cm;
+    font-weight: bolder;
+    word-spacing: 0.3cm;
+    text-align: center;
+}
+
+h1 {
+    text-align: center;
 }
 
 td {
-  color: #000;
-  background-color: #f5f5f5;
+    color: #000;
+    background-color: #f5f5f5;
 }
 
 th {
-  color: whitesmoke;
-  background-color: #003366;
+    color: whitesmoke;
+    background-color: #003366;
+}
+
+li {
+    text-align: center;
+}
+
+hr {
+    border: 1px solid black;
 }
 
 body {
-  background-color: aqua;
+    background-color: aqua;
 }
+
 table {
-  position: absolute;
-  top: 1117px;
-  left: 33%;
-  font-weight: bolder;
-  text-align: center;
+    position: absolute;
+    top: 1041px;
+    left: 40%;
+    font-weight: bolder;
+    text-align: center;
+}
+
+body {
+    border: 3px solid red;
 }
 
 fieldset {
-  border: 1px solid black;
-  font-weight: bolder;
+    border: 1px solid black;
+    font-weight: bolder;
 }
 
 legend {
-  text-align: center;
-  border: 1px solid black;
+    text-align: center;
+    border: 1px solid black;
 }
 
 label {
-  color: #4a4a4a;
+    color: #4a4a4a;
 }
 
 input[type="text"],
 input[type="tel"],
 input[type="email"] {
-  border: 2.5px solid black;
+    border: 2.5px solid black;
 }
 
 input[type="select"],
 input[type="option"] {
-  border: 2.5px solid black;
+    border: 2.5px solid black;
 }
 
 h5 {
-  text-align: right;
-  font-weight: bolder;
-  margin: 0;
-  padding: 0;
+    text-align: right;
+    font-weight: bolder;
+    margin: 0;
+    padding: 0;
 }
 
 input[type="button"]:hover {
-  background-color: aqua;
-  color: solid black;
-  font-weight: bolder;
-  padding: 1px;
+    background-color: aqua;
+    color: solid black;
+    font-weight: bolder;
+    padding: 1px;
 }
+
 input[type="button"]:hover {
-  background-color: black !important;
-  color: red !important;
+    background-color: black !important;
+    color: red !important;
 }
