--- a/Hetuk/CSS/Animation.css
+++ b/Hetuk/CSS/Animation.css
@@ -1,31 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
-<<<<<<< HEAD
-* {
-    padding: 0;
-    margin: 0;
-}
-
-h1 {
-    font-family: Dancing Script;
-    font-size: 85px;
-    text-align: center;
-    text-transform: capitalize;
-    font-weight: 300;
-    animation-name: opposite;
-    animation-duration: 7s;
-    animation-delay: 5s;
-    animation-iteration-count: infinite;
-    color: red;
-    background-color: yellow;
-}
-
-
-=======
-
 * {
   padding: 0;
   margin: 0;
 }
+
 h1 {
   font-family: Dancing Script;
   font-size: 85px;
@@ -39,7 +17,20 @@ h1 {
   color: red;
   background-color: yellow;
 }
->>>>>>> ed3cde1480e054bf010c8423ce920bb51f14e8a4
+
+h1 {
+  font-family: Dancing Script;
+  font-size: 85px;
+  text-align: center;
+  text-transform: capitalize;
+  font-weight: 300;
+  animation-name: opposite;
+  animation-duration: 7s;
+  animation-delay: 5s;
+  animation-iteration-count: infinite;
+  color: red;
+  background-color: yellow;
+}
 /* h1:hover {
   transition: ease-in;
   transition-duration: 0.5s;
@@ -48,66 +39,6 @@ h1 {
 } */
 
 p {
-<<<<<<< HEAD
-    font-family: Dancing Script;
-    font-size: 55px;
-    text-align: center;
-    text-transform: capitalize;
-    font-weight: 300;
-    animation-name: hetuk;
-    animation-duration: 7s;
-    animation-delay: 5s;
-    animation-iteration-count: infinite;
-    color: red;
-    background-color: yellow;
-}
-
-@keyframes hetuk {
-    from {
-        scale: 200% 1;
-        translate: 200vw 0;
-    }
-    to {
-        scale: 100% 1;
-        translate: 0 0;
-    }
-}
-
-@keyframes opposite {
-    from {
-        scale: 200% 1;
-        translate: -200vw 0;
-    }
-    to {
-        scale: 100% 1;
-        translate: 0 0;
-    }
-}
-
-img {
-    width: 100%;
-    height: 500px;
-    animation-name: image;
-    animation-duration: 5s;
-    /* animation-delay: 5s; */
-    animation-iteration-count: infinite;
-    align-items: center;
-    justify-content: center;
-}
-
-@keyframes image {
-    from {
-        transform: rotatex(360deg);
-    }
-    to {
-        transition: rotate(50deg);
-    }
-}
-
-hr {
-    border: 3px solid black;
-}
-=======
   font-family: Dancing Script;
   font-size: 55px;
   text-align: center;
@@ -120,6 +51,7 @@ hr {
   color: red;
   background-color: yellow;
 }
+
 @keyframes hetuk {
   from {
     scale: 200% 1;
@@ -141,4 +73,26 @@ hr {
     translate: 0 0;
   }
 }
->>>>>>> ed3cde1480e054bf010c8423ce920bb51f14e8a4
+
+.logo > img {
+  width: 450px;
+  height: 450px;
+  animation-name: image;
+  animation-duration: 5s;
+  animation-direction: normal;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes image {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+hr {
+  border: 3px solid black;
+}
