--- a/Practice/React.css
+++ b/Practice/React.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(to top left, orange, white, green);
+    background: linear-gradient(to bottom right, orange, white, green);
 }
 
 * {
@@ -10,20 +10,78 @@ body {
 
 .hello {
     position: relative;
+    height: 100vh;
 }
 
 img {
     width: 500px;
     height: 500px;
-    border-radius: 50%;
     position: sticky;
     top: 20%;
-    left: 70%;
+    left: 76%;
+    animation-name: image;
+    animation-duration: 5s;
+    animation-direction: normal;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+h1,
+h3,
+h5,
+p {
+    text-align: center;
+}
+
+@keyframes image {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+h3,
+h5 {
+    text-decoration: underline;
+}
+
+.marq {
+    background-color: white;
+    color: red;
+    padding: 5px;
+    font-size: xx-large;
+    border: 1px solid red;
+}
+
+nav {
+    background-color: aquamarine;
+    color: black;
+    font-size: 30px;
+    text-align: center;
+    word-spacing: 13cm;
+    border: 1px solid red;
+    padding: 5px;
+}
+
+h1 {
+    font-size: 65px;
+}
+
+ol {
+    list-style-position: inside;
+    text-align: center;
+}
+
+ul {
+    list-style: inside;
+    text-align: left;
 }
 
 .left {
     position: absolute;
-    top: 20%;
+    top: -57%;
     right: 27%;
     font-size: 30px;
 }
