--- a/Hetuk/CSS/Flex.css
+++ b/Hetuk/CSS/Flex.css
@@ -1,9 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 .parent {
   display: flex;
-  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap-reverse;
   justify-content: space-evenly;
 }
 .child {
@@ -15,9 +14,26 @@
   color: whitesmoke;
   font-size: 50px;
   text-align: center;
+  outline-style: dotted;
+  outline-color: red;
+  outline-offset: 5px;
+  font-family: Playfair Display;
 }
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+/* body {
+  border: 3px solid black;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  height: 80vh;
+} */
+h1 {
+  position: relative;
+  text-align: center;
+  font-size: 50px;
+  font-family: Playfair Display;
 }
