--- a/Practice/CSS/Grid2.css
+++ b/Practice/CSS/Grid2.css
@@ -1,35 +1,53 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
 }
 
 .parent {
-    display: flex;
-    border: 1px solid red;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    height: 100px;
-    width: 100%;
-    background-color: white;
+  display: flex;
+  border: 1px solid red;
+  height: 100px;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .child1 {
-    border: 1px solid green;
-    align-items: left;
-    display: flex;
-    gap: 15px;
+  border: 1px solid green;
+  padding: 10px;
+  margin: 10px;
 }
-
+option,
+select {
+  font-size: 15px;
+  background-color: #d7e2f8;
+  border-radius: 10px;
+}
+div {
+  display: flex;
+}
 .child2 {
-    border: 1px solid blue;
-    align-items: right;
-    justify-content: space-between;
-    display: flex;
+  border: 1px solid blue;
+  padding: 10px;
+  margin: 10px;
+  width: 700px;
+  gap: 1cm;
+  display: flex;
 }
-
+button {
+  border-radius: 4px;
+  background-color: #ed0331;
+  padding: 10px;
+  color: whitesmoke;
+  font-size: 15px;
+  font-weight: bolder;
+}
+button:hover {
+  opacity: 0.5;
+}
 img {
-    width: 120px;
-    height: 50px;
+  width: 150px;
+  height: 50px;
 }
