--- a/Practice/CSS/Grid2.css
+++ b/Practice/CSS/Grid2.css
@@ -1,53 +1,90 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style: none;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
 }
 
 .parent {
-  display: flex;
-  border: 1px solid red;
-  height: 100px;
-  width: 100%;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    border: 1px solid red;
+    height: 100px;
+    width: 100%;
+    font-family: Playfair Display;
+    justify-content: space-between;
+    align-items: center;
+    background-color: whitesmoke;
 }
 
 .child1 {
-  border: 1px solid green;
-  padding: 10px;
-  margin: 10px;
+    border: 1px solid green;
+    padding: 10px;
+    margin: 10px;
 }
+
 option,
 select {
-  font-size: 15px;
-  background-color: #d7e2f8;
-  border-radius: 10px;
+    font-size: 17px;
+    background-color: #d7e2f8;
+    border-radius: 10px;
+    width: 134px;
+    text-align: center;
+    cursor: pointer;
+    font-family: Playfair Display;
 }
-div {
-  display: flex;
+
+div,
+span {
+    display: flex;
+    gap: 10px;
 }
+
+span {
+    background-color: #ffd5d2;
+    color: #d56059;
+    font-size: 12px;
+    padding: 3px 6px;
+    border-radius: 9.5px;
+    text-align: center;
+    height: 20px;
+    width: 43px;
+    font-weight: bolder;
+    font-family: Playfair Display;
+}
+
+.span-grid {
+    display: grid;
+    grid-template-rows: repeat(1, 1fr);
+    gap: 3px;
+}
+
 .child2 {
-  border: 1px solid blue;
-  padding: 10px;
-  margin: 10px;
-  width: 700px;
-  gap: 1cm;
-  display: flex;
+    border: 1px solid blue;
+    padding: 10px;
+    margin: 10px;
+    width: 700px;
+    align-items: center;
+    justify-content: center;
+    gap: 1cm;
+    display: flex;
 }
+
 button {
-  border-radius: 4px;
-  background-color: #ed0331;
-  padding: 10px;
-  color: whitesmoke;
-  font-size: 15px;
-  font-weight: bolder;
+    border-radius: 4px;
+    background-color: #ed0331;
+    font-family: Playfair Display;
+    padding: 10px;
+    color: whitesmoke;
+    font-size: 15px;
+    font-weight: bolder;
 }
+
 button:hover {
-  opacity: 0.5;
+    opacity: 0.5;
 }
+
 img {
-  width: 150px;
-  height: 50px;
+    width: 150px;
+    height: 50px;
 }
