--- a/Practice/CSS/Grid2.css
+++ b/Practice/CSS/Grid2.css
@@ -37,7 +37,7 @@ select {
 div,
 span {
     display: flex;
-    gap: 10px;
+    gap: 15px;
 }
 
 span {
@@ -61,12 +61,15 @@ span {
 
 .child2 {
     border: 1px solid blue;
-    padding: 10px;
+    padding: 5px;
+    height: 70px;
     margin: 10px;
     width: 700px;
     align-items: center;
     justify-content: center;
-    gap: 1cm;
+    /* gap: 3.5cm; */
+    text-align: justify;
+    text-justify: inter-word;
     display: flex;
 }
 
@@ -81,7 +84,7 @@ button {
 }
 
 button:hover {
-    opacity: 0.5;
+    background-color: brown;
 }
 
 img {
