--- a/Practice/CSS/Masai.css
+++ b/Practice/CSS/Masai.css
@@ -6,14 +6,15 @@
 }
 
 .parent {
+    padding: 10px;
+    margin: 10px;
     font-family: "Playfair Display";
     display: grid;
     width: 100%;
-    height: 1000px;
+    height: 900px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     border: 1px solid red;
-    /* flex-direction: column; */
 }
 
 span {
@@ -45,7 +46,7 @@ button:hover {
 }
 
 .child1 {
-    gap: 7px;
+    gap: 12px;
     border: 2px solid green;
 }
 
@@ -60,9 +61,9 @@ div {
 .images {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 5px;
+    gap: 12px;
     justify-content: center;
-    align-items: center;
+    align-items: baseline;
 }
 
 .image1 {
@@ -78,9 +79,9 @@ div {
 .child2 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    justify-content: space-between;
+    justify-content: space-be;
     align-items: center;
-    gap: 7px;
+    gap: 12px;
     border: 2px solid blue;
 }
 
@@ -96,14 +97,14 @@ div {
     object-fit: cover;
 }
 
-.image6 {
-    height: 215px;
-    width: 490px;
-    object-fit: cover;
-}
-
 .image5 {
     height: 240px;
     width: 240px;
+    object-fit: cover;
+}
+
+.image6 {
+    height: 215px;
+    width: 490px;
     object-fit: cover;
 }
