--- a/Hetuk/CSS/Flex.css
+++ b/Hetuk/CSS/Flex.css
@@ -1,22 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
-.parent {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  justify-content: space-evenly;
+.parent1 {
+  display: grid;
+  align-content: center;
+  justify-items: center;
 }
 .child {
-  width: 200px;
-  height: 200px;
+  width: 100px;
+  height: 100px;
   background: blue;
   margin: 5px;
-  border: 5px solid black;
+  border: 5px solid red;
   color: whitesmoke;
   font-size: 50px;
-  text-align: center;
-  outline-style: dotted;
-  outline-color: red;
-  outline-offset: 5px;
   font-family: Playfair Display;
 }
 * {
@@ -24,16 +19,45 @@
   padding: 0;
   box-sizing: border-box;
 }
-/* body {
-  border: 3px solid black;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  height: 80vh;
-} */
 h1 {
   position: relative;
   text-align: center;
+  font-size: 50px;
+  font-family: Playfair Display;
+}
+.parent2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.child1 {
+  width: 100px;
+  height: 100px;
+  background: red;
+  margin: 5px;
+  border: 5px solid blue;
+  color: whitesmoke;
+  font-size: 50px;
+  font-family: Playfair Display;
+}
+.parent {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  height: 100vh;
+  width: 100%;
+}
+.parent3 {
+  display: grid;
+  align-content: center;
+  justify-content: center;
+}
+.child2 {
+  width: 100px;
+  height: 100px;
+  background: orangered;
+  margin: 5px;
+  border: 5px solid black;
+  color: whitesmoke;
   font-size: 50px;
   font-family: Playfair Display;
 }
