--- a/Hetuk/CSS/Grid.css
+++ b/Hetuk/CSS/Grid.css
@@ -1,17 +1,26 @@
-.parent {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-}
-.child {
-  width: 200px;
-  height: 200px;
-  background: blue;
-  margin: 5px;
-  border: 5px solid black;
-}
-* {
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  border: 3px solid black;
+  background: #000;
+}
+.parent {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+  border: 1px solid red;
+  height: 150vh;
+  justify-items: center;
+  align-items: center;
+}
+.child {
+  width: 200px;
+  height: 90px;
+  background: blue;
+  border: 1px solid black;
+  color: whitesmoke;
+  outline-style: dotted;
+  outline-color: red;
+  outline-offset: 5px;
 }
