--- a/Practice/CSS/Masai2.css
+++ b/Practice/CSS/Masai2.css
@@ -44,10 +44,9 @@ select:hover {
 }
 
 .A,
-.A1 {
+.Z1 {
   display: flex;
   gap: 10px;
-  
 }
 li {
   font-size: 15px;
@@ -58,6 +57,9 @@ li:hover {
 }
 .A1 {
   color: red;
+  display: flex;
+  background-color: lightsalmon;
+  border-radius: 10px;
   font-size: 13px;
   padding: 3px 6px;
   text-align: center;
@@ -204,13 +206,18 @@ h1,
 }
 
 .image5 {
-  height: 225px;
+  height: 215px;
   width: 240px;
   object-fit: cover;
 }
 
 .image6 {
   height: 215px;
-  width: 240px;
+  width: 490px;
   object-fit: cover;
+}
+.Z {
+  display: flex;
+  margin-top: 10px;
+  gap: 5px;
 }
