--- a/Practice/CSS/Masai.css
+++ b/Practice/CSS/Masai.css
@@ -6,24 +6,26 @@
 }
 
 body {
-    background-image: url(https://masai-website-images.s3.ap-south-1.amazonaws.com/Rectangle_34624246_254407bbd8.jpg);
     margin: 10px;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin: 10px;
+    height: 100vh;
 }
 
 .parent {
+    background-image: url(https://masai-website-images.s3.ap-south-1.amazonaws.com/Rectangle_34624246_254407bbd8.jpg);
+    margin: 10px;
+    height: 680px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     padding: 3px;
     margin: 10px;
     font-family: "Playfair Display";
-    display: grid;
     width: 100%;
-    height: 900px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     /* border: 1px solid red; */
+    justify-content: center;
+    align-items: center;
 }
 
 span {
@@ -110,10 +112,11 @@ div {
     height: 225px;
     width: 240px;
     object-fit: cover;
+    margin-top: 12px;
 }
 
 .image6 {
-    height: 215px;
+    height: 225px;
     width: 500px;
     object-fit: cover;
 }
