--- a/Practice/CSS/Form.css
+++ b/Practice/CSS/Form.css
@@ -51,5 +51,9 @@ input[type="number"] {
   border: 1px solid red;
 }
 button {
-  border-radius: 10px;
+  border-radius: 5px;
+  width: 200px;
+  height: 25px;
+  background-color: orangered;
+  color: whitesmoke;
 }
