--- a/Projects/CSS/Profile.css
+++ b/Projects/CSS/Profile.css
@@ -130,6 +130,16 @@ nav {
   background-color: white;
 }
 
+.parent1 > .img1:hover,
+.parent1 > .img2:hover,
+.parent1 > .img3:hover,
+.parent1 > .img4:hover,
+.parent1 > .img5:hover,
+.parent1 > .img6:hover {
+  transform: scale(1.1);
+  transition: ease-in-out;
+  opacity: 1;
+}
 .parent1 > .img1,
 .parent1 > .img2,
 .parent1 > .img3,
@@ -139,6 +149,7 @@ nav {
   width: 120px;
   height: 120px;
   object-fit: contain;
+  opacity: 0.1;
 }
 .parent2 {
   background-color: gray;
