--- a/Projects/CSS/Profile.css
+++ b/Projects/CSS/Profile.css
@@ -14,10 +14,9 @@
 nav {
   display: flex;
   justify-content: space-between;
-  height: 100px;
   align-items: center;
-  /* margin: 10px; */
   padding: 10px;
+  /* margin: 10px; */
   /* background-color: gray;
   border-radius: 40px;
   border-top: 1px solid white; */
@@ -62,6 +61,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 10px;
 }
 
 .profile > .A > .profile_img > img {
@@ -87,7 +87,7 @@ nav {
   border-radius: 25px;
   position: absolute;
   left: 53%;
-  bottom: 75%;
+  bottom: 79.5%;
   background-color: whitesmoke;
   transform: rotate(-10deg);
   opacity: 0.5;
@@ -112,10 +112,14 @@ nav {
 .profile > .text > .P1 > .B1:hover {
   transform: scale(1.1);
   transition: ease-out;
+  background-color: white;
+  color: red;
+  font-weight: bolder;
 }
 
 .child2 {
   display: flex;
+  position: relative;
 }
 .parent1 {
   display: flex;
@@ -193,7 +197,15 @@ nav {
   background-color: whitesmoke;
   color: black;
 }
-
+.parent3 > button:hover {
+  background-color: cyan;
+  color: chocolate;
+  rotate: 0deg;
+  font-size: larger;
+  font-weight: bolder;
+  transform: scale(1.1);
+  transition: ease-out;
+}
 .card {
   display: flex;
   justify-content: space-around;
@@ -229,4 +241,53 @@ nav {
   text-align: left;
   padding: 10px 20px;
   /* border: 1px solid black; */
+}
+
+@media (max-width: 486px) {
+  .parent1 {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: space-evenly;
+    align-content: center;
+  }
+  .profile > .A > .side_text {
+    bottom: 48%;
+    left: 59.5%;
+  }
+
+  nav {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .child1 {
+    width: 50%;
+    flex-direction: column;
+    gap: 10px;
+    right: 27%;
+  }
+  .child2 {
+    width: 50%;
+    flex-direction: column;
+    gap: 3px;
+    left: 58%;
+    bottom: 110px;
+  }
+  .card {
+    flex-direction: column;
+    width: 100%;
+  }
+  .parent3 > button {
+    position: absolute;
+    border-radius: 30px;
+    border: 1px solid black;
+    width: 130px;
+    height: 40px;
+    text-align: center;
+    top: 3%;
+    left: 32%;
+    background-color: whitesmoke;
+    color: black;
+  }
 }
