--- a/Projects/CSS/Profile.css
+++ b/Projects/CSS/Profile.css
@@ -180,7 +180,7 @@ nav {
   width: 70%;
   margin: auto;
   position: absolute;
-  top: 30%;
+  top: 35%;
   left: 45%;
   transform: translate(-45%, -45%);
 }
@@ -249,11 +249,11 @@ nav {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    justify-items: space-evenly;
+    justify-items: center;
     align-content: center;
   }
   .profile > .A > .side_text {
-    bottom: 46.5%;
+    bottom: 53.5%;
     left: 59.5%;
   }
 
@@ -288,6 +288,37 @@ nav {
     text-align: center;
     top: 3%;
     left: 32%;
+    background-color: whitesmoke;
+    color: black;
+  }
+}
+
+@media (min-width: 487px) and (max-width: 768px) {
+  .card {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 5px;
+  }
+  .parent1 {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    align-content: center;
+  }
+  .profile > .A > .side_text {
+    bottom: 75.5%;
+    left: 55.4%;
+  }
+  .parent3 > button {
+    position: absolute;
+    border-radius: 30px;
+    border: 1px solid black;
+    width: 130px;
+    height: 40px;
+    text-align: center;
+    top: 3%;
+    left: 41.5%;
     background-color: whitesmoke;
     color: black;
   }
