--- a/Hetuk/CSS/Tooltip.css
+++ b/Hetuk/CSS/Tooltip.css
@@ -12,7 +12,7 @@
   z-index: 1;
   border-bottom: 1px solid black;
 }
-.tooltip .tooltiptext {
+.tooltiptext {
   visibility: hidden;
   width: 100px;
   background-color: black;
