--- a/Anime Website/index.css
+++ b/Anime Website/index.css
@@ -1,205 +1,276 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-transform: uppercase;
 }
 
 body {
-    background-image: url(./utils/Background\ Image.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
+  background-image: url(./utils/Background\ Image.jpg);
+  background-size: cover;
+  background-repeat: repeat;
 }
 
 .title {
-    height: 110px;
-    width: 100%;
-    font-size: 33px;
-    font-weight: bolder;
-    color: white;
-    font-family: cursive;
-    font-style: italic;
-    padding: 10px 70px;
+  height: 110px;
+  width: 100%;
+  font-size: 33px;
+  font-weight: bolder;
+  color: white;
+  font-family: cursive;
+  font-style: italic;
+  padding: 10px 70px;
 }
 
 .navbar {
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: black;
-    position: relative;
-    border-top: 1px solid rgb(56, 56, 56);
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: black;
+  position: relative;
+  border-top: 1px solid rgb(56, 56, 56);
 }
 
-.child1>ul {
-    font-size: 15px;
-    color: white;
-    display: flex;
-    gap: 21px;
-    list-style-type: none;
-    justify-content: center;
-    align-items: center;
+.child1 > ul {
+  font-size: 15px;
+  color: white;
+  display: flex;
+  gap: 21px;
+  list-style-type: none;
+  justify-content: center;
+  align-items: center;
 }
 
 .after {
-    position: absolute;
-    font-size: 8px;
-    padding: 5px 3px;
+  position: absolute;
+  font-size: 8px;
+  padding: 5px 3px;
 }
 
-.child1>ul>li:hover {
-    background-color: whitesmoke;
-    color: black;
-    cursor: pointer;
+.child1 > ul > li:hover {
+  background-color: whitesmoke;
+  color: black;
+  cursor: pointer;
 }
 
 .child2 {
-    display: flex;
-    gap: 20px;
-    align-items: center;
-    height: 50px;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  height: 50px;
 }
 
-.child2>img {
-    background-color: white;
-    height: 25px;
+.child2 > img {
+  background-color: white;
+  height: 25px;
 }
 
 .parent {
-    background-color: whitesmoke;
-    margin: 0 45px;
+  background-color: whitesmoke;
+  margin: 0 45px;
 }
 
 .recent {
-    display: flex;
-    padding: 35px 40px;
-    color: whitesmoke;
+  display: flex;
+  padding: 35px 40px;
+  color: whitesmoke;
 }
 
 .item {
-    position: relative;
-    width: 1500px;
-    height: 500px;
-    z-index: 1;
+  position: relative;
+  width: 1500px;
+  height: 500px;
+  z-index: 1;
 }
 
 .item:hover {
-    transition: ease-in-out 0.1s;
-    transform: scale3d(1.1, 1.1, 1.1);
+  transition: ease-in-out 0.1s;
+  transform: scale3d(1.1, 1.1, 1.1);
 }
 
 .text {
-    position: absolute;
-    bottom: 0;
-    font-size: 23px;
-    font-weight: bolder;
-    text-align: center;
-    z-index: 1;
+  position: absolute;
+  bottom: 0;
+  font-size: 23px;
+  font-weight: bolder;
+  text-align: center;
+  z-index: 1;
 }
 
 .text:hover {
-    transform: scale3d(0.9, 0.9, 0.9);
-    transition: ease-in-out 1s;
+  transform: scale3d(0.9, 0.9, 0.9);
+  transition: ease-in-out 1s;
 }
 
 .image1 {
-    filter: brightness(60%) contrast(90%) saturate(110%);
-    height: 100%;
-    width: 100%;
-    background-image: url(./utils/Solo\ Leveling.png);
-    background-size: cover;
-    background-position: center;
+  filter: brightness(60%) contrast(90%) saturate(110%);
+  height: 100%;
+  width: 100%;
+  background-image: url(./utils/Solo\ Leveling.png);
+  background-size: cover;
+  background-position: center;
 }
 
 .image2 {
-    filter: brightness(60%) contrast(90%) saturate(110%);
-    height: 100%;
-    width: 100%;
-    background-image: url(./utils/Jujutsu\ Kaisen.jpg);
-    background-size: cover;
-    background-position: center;
+  filter: brightness(60%) contrast(90%) saturate(110%);
+  height: 100%;
+  width: 100%;
+  background-image: url(./utils/Jujutsu\ Kaisen.jpg);
+  background-size: cover;
+  background-position: center;
 }
 
 .image3 {
-    filter: brightness(60%) contrast(90%) saturate(110%);
-    height: 100%;
-    width: 100%;
-    background-image: url(./utils/Demon\ Slayer.jpg);
-    background-size: cover;
-    background-position: center;
+  filter: brightness(60%) contrast(90%) saturate(110%);
+  height: 100%;
+  width: 100%;
+  background-image: url(./utils/Demon\ Slayer.jpg);
+  background-size: cover;
+  background-position: center;
 }
 
 .image4 {
-    filter: brightness(60%) contrast(90%) saturate(110%);
-    height: 100%;
-    width: 100%;
-    background-image: url(./utils/Naruto.jpg);
-    background-size: cover;
-    background-position: center;
+  filter: brightness(60%) contrast(90%) saturate(110%);
+  height: 100%;
+  width: 100%;
+  background-image: url(./utils/Naruto.jpg);
+  background-size: cover;
+  background-position: center;
 }
 
 .image5 {
-    filter: brightness(60%) contrast(90%) saturate(110%);
-    height: 100%;
-    width: 100%;
-    background-image: url(./utils/Death\ Note.jpg);
-    background-size: cover;
-    background-position: center;
+  filter: brightness(60%) contrast(90%) saturate(110%);
+  height: 100%;
+  width: 100%;
+  background-image: url(./utils/Death\ Note.jpg);
+  background-size: cover;
+  background-position: center;
 }
 
+.latest {
+  display: flex;
+  gap: 27px;
+}
 .anime {
-    display: flex;
-    gap: 30px;
-    padding: 10px 39px;
+  display: flex;
+  gap: 13px;
+  padding: 10px 39px;
 }
 
 .latest_img {
-    width: 500px;
-    height: 300px;
-    float: left;
-    object-fit: contain;
+  width: 500px;
+  height: 300px;
+  float: left;
+  object-fit: contain;
 }
 
-.description>p {
-    padding: 15px 0;
-    font-size: large;
-    font-weight: bold;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
+.description > p {
+  padding: 15px 0;
+  font-size: 25px;
+  font-weight: bold;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.description > p:hover {
+  color: rgb(250, 50, 50);
 }
 
 .time {
-    font-weight: 700;
-    display: flex;
-    gap: 15px;
-    opacity: 0.5;
+  font-weight: 700;
+  display: flex;
+  gap: 15px;
+  opacity: 0.5;
 }
 
 .date {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 7px;
-    text-align: center;
-    font-size: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+  text-align: center;
+  font-size: 13px;
 }
 
 .clock {
-    height: 17px;
-    width: 17px;
+  height: 15px;
+  width: 15px;
 }
 
 .source {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 7px;
-    text-align: center;
-    font-size: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+  text-align: center;
+  font-size: 13px;
 }
 
 .profile {
-    height: 17px;
-    width: 17px;
+  height: 15px;
+  width: 15px;
+}
+
+.child4 {
+  padding: 15px 0;
+}
+
+input {
+  height: 45px;
+  width: 300px;
+}
+input::placeholder {
+  padding: 0 9px;
+}
+
+h6 {
+  margin-top: 40px;
+  height: 40px;
+  width: 135px;
+  text-align: center;
+  background-color: rgb(51, 50, 50);
+  color: whitesmoke;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  padding: 10px 0;
+}
+
+hr {
+  width: 300px;
+  border: 2px solid black;
+}
+
+.icons {
+  display: flex;
+}
+
+.icons > img {
+  height: 50px;
+  width: 50px;
+  margin: 30px 10px;
+  border-radius: 10px;
+}
+
+h5 {
+  margin-top: 40px;
+  height: 40px;
+  width: 185px;
+  text-align: center;
+  background-color: rgb(51, 50, 50);
+  color: whitesmoke;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  padding: 10px 0;
+}
+
+.uploads {
+  margin: 20px 150px;
+  color: red;
+}
+
+.uploads > p {
+  padding: 15px 0;
 }
